# ignorelib

./: README.md  ignorelib.py  pyproject.toml  test_ignorelib.py
