[tool.poetry]
name = "ignorelib"
version = "0.3.0"
description = "Use the syntax and semantics of gitignore with custom ignore file names and locations"
readme = "README.md"
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"
homepage = "https://github.com/benkehoe/ignorelib"
repository = "https://github.com/benkehoe/ignorelib"
keywords = [
    "ignore",
    "git",
    "gitignore"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Filesystems"
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
